--- a/MovieBase/MovieBaseServer/appsettings.json
+++ b/MovieBase/MovieBaseServer/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    //Add database name after equal sign
+    "Project": "Server=.\\SQLEXPRESS;Database=;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
