--- a/MovieBase/MovieBaseServer/MovieBaseServer.csproj
+++ b/MovieBase/MovieBaseServer/MovieBaseServer.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.13.0" />
+  </ItemGroup>
+
 
 </Project>
