Database added, template built

--- a/MovieBase/MovieBaseServer/appsettings.json
+++ b/MovieBase/MovieBaseServer/appsettings.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings": {
     //Add database name after equal sign
-    "Project": "Server=.\\SQLEXPRESS;Database=;Trusted_Connection=True;"
+    "Project": "Server=.\\SQLEXPRESS;Database=moviebase;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
